--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "public/TodoList.test.tsx"],
+  "include": ["src", "public/TodoList.test.tsx", "public/UserList.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
